plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '1.1.0'
}

group = 'org.mnm'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = '6.0.3'
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.32'

    implementation platform("tools.jackson:jackson-bom:3.1.0")
    implementation 'tools.jackson.core:jackson-databind'
    // xxh3
    implementation("net.openhft:zero-allocation-hashing:2026.0")
    // Graal partial support for previous version https://github.com/oracle/graalvm-reachability-metadata/pull/121/changes
    implementation("com.github.luben:zstd-jni:1.5.7-7")
    implementation("org.xerial:sqlite-jdbc:3.53.0.0")

    testImplementation platform("org.junit:junit-bom:$junitVersion")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation "org.assertj:assertj-core:3.27.7"
    testImplementation "org.mockito:mockito-core:5.20.0"
    testImplementation "org.mockito:mockito-junit-jupiter:5.20.0"
    testImplementation "org.wiremock:wiremock:3.13.2"
}

tasks.named('test') {
    useJUnitPlatform()
//    jvmArgs("-agentlib:native-image-agent=config-output-dir=./config-dir/,config-write-period-secs=300,config-write-initial-delay-secs=5")
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

application {
    applicationName = 'sweet'
    applicationDefaultJvmArgs = [
            '--enable-native-access=ALL-UNNAMED',
            '-Xmx256m'
    ]
    executableDir = ''
    mainClass = 'org.mnm.MainClazz'
}

graalvmNative {
    binaries {
        named("main") {
            imageName = application.applicationName
            buildArgs.addAll(
                    '--enable-native-access=ALL-UNNAMED',
                    '--enable-url-protocols=https',
                    '-R:MaxHeapSize=256m'
            )
        }
    }
}
